Grease Pencil Modificador Time Offset Error #85745

Closed
opened 2021-02-17 17:09:48 +01:00 by Juan Ñahui · 25 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-14 21:31, hash: 7a608f88a7
Worked: (newest version of Blender that worked as expected)

Short description of error
[Hola, el modificador Time Offset solo está mostrando el ultimo frame de un loop, el error es reciente]

Exact steps for others to reproduce the error
Ingresa al modo 2D, crea 3 dibujos en fotogramas distintos, usa el modificador time offset en loop, haz render y solo te mostrará el ultimo frame, aunque especifiques el frema dos en cualquier parte de la línea de tiempo, espero se pueda resolver pronto, un saludo Antonio y gracias por tu trabajo

TimeOffsetError.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1050/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-14 21:31, hash: `7a608f88a7` Worked: (newest version of Blender that worked as expected) **Short description of error** [Hola, el modificador Time Offset solo está mostrando el ultimo frame de un loop, el error es reciente] **Exact steps for others to reproduce the error** Ingresa al modo 2D, crea 3 dibujos en fotogramas distintos, usa el modificador time offset en loop, haz render y solo te mostrará el ultimo frame, aunque especifiques el frema dos en cualquier parte de la línea de tiempo, espero se pueda resolver pronto, un saludo Antonio y gracias por tu trabajo [TimeOffsetError.blend](https://archive.blender.org/developer/F9812653/TimeOffsetError.blend)
Author

Added subscriber: @JuanNahuiPariona

Added subscriber: @JuanNahuiPariona

#86549 was marked as duplicate of this issue

#86549 was marked as duplicate of this issue

#86534 was marked as duplicate of this issue

#86534 was marked as duplicate of this issue

#86345 was marked as duplicate of this issue

#86345 was marked as duplicate of this issue

#86241 was marked as duplicate of this issue

#86241 was marked as duplicate of this issue

#86105 was marked as duplicate of this issue

#86105 was marked as duplicate of this issue

Added subscribers: @filedescriptor, @antoniov

Added subscribers: @filedescriptor, @antoniov

I cannot reproduce it. I just download your file and render and get frames 1, 2, 3 in loop. I tested with last build of today on Windows.

@filedescriptor Can you reproduce it?

I cannot reproduce it. I just download your file and render and get frames 1, 2, 3 in loop. I tested with last build of today on Windows. @filedescriptor Can you reproduce it?
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can reproduce this. When I set the time offset modifier to "Fixed frame" and choose a frame, then move the cursor to the first frame the render will show the first frame even though the time offset modifier should show another. It acts like the modifier is disabled for the render even when it's enabled.

image.png

I can reproduce this. When I set the time offset modifier to "Fixed frame" and choose a frame, then move the cursor to the first frame the render will show the first frame even though the time offset modifier should show another. It acts like the modifier is disabled for the render even when it's enabled. ![image.png](https://archive.blender.org/developer/F9813546/image.png)

This error was introduced with commit 1e55d28a4e in task #85035.

The problem was the frame was reset in render, but if there was a time modifier, the time was not remaped.

This error was introduced with commit 1e55d28a4e24 in task #85035. The problem was the frame was reset in render, but if there was a time modifier, the time was not remaped.

This issue was referenced by 0d94695cc4

This issue was referenced by 0d94695cc458b1f7666104314b57b174f0ee93d1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Antonio Vazquez self-assigned this 2021-02-19 16:18:56 +01:00
Member

Added subscriber: @ostrijper4ik

Added subscriber: @ostrijper4ik
Member

Added subscriber: @gamma92

Added subscriber: @gamma92
Member

Added subscribers: @andrewblawson, @lichtwerk, @dupoxy

Added subscribers: @andrewblawson, @lichtwerk, @dupoxy
Contributor

Removed subscriber: @dupoxy

Removed subscriber: @dupoxy

In #85745#1115454, @antoniov wrote:
This error was introduced with commit 1e55d28a4e in task #85035.

The problem was the frame was reset in render, but if there was a time modifier, the time was not remaped.

Hello! Don't know if these is the right place to ask but, do the .c file resolve the problem? how can i use it? (try to search for almost week: try to put the code in blender to compile, try to search for a file with the same name in the blender file forlder but... nothing, I can't figure out how to use it).

thanks

> In #85745#1115454, @antoniov wrote: > This error was introduced with commit 1e55d28a4e24 in task #85035. > > The problem was the frame was reset in render, but if there was a time modifier, the time was not remaped. Hello! Don't know if these is the right place to ask but, do the .c file resolve the problem? how can i use it? (try to search for almost week: try to put the code in blender to compile, try to search for a file with the same name in the blender file forlder but... nothing, I can't figure out how to use it). thanks
Member

@gamma92 the fix was committed to master, so you can download the latest build (alpha) from https://builder.blender.org/download/ and use that version of blender.

@gamma92 the fix was committed to master, so you can download the latest build (alpha) from https://builder.blender.org/download/ and use that version of blender.
Member

Added subscriber: @Adwait_Creationz

Added subscriber: @Adwait_Creationz

Closed as duplicate of #86549

Closed as duplicate of #86549

Changed status from 'Duplicate' to: 'Resolved'

Changed status from 'Duplicate' to: 'Resolved'

Changed status by error

Changed status by error

Added subscribers: @(Deleted), @dupoxy

Added subscribers: @(Deleted), @dupoxy
Contributor

Removed subscriber: @dupoxy

Removed subscriber: @dupoxy
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85745
No description provided.