Fix T85745: Render grease pencil with time offset modifier fails

The problem was introduced fixing task T85035. 

As the frame was set again when render, if there was a time modifier, the frame was not remaped to the right frame number.